--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
                         <p class="text-sm text-gray-600 font-medium mb-3">Tech Stack:</p>
                         <div class="flex flex-wrap gap-2">
                             <span class="px-3 py-1 bg-blue-100 text-blue-700 rounded-full text-sm">Laravel</span>
-                            <span class="px-3 py-1 bg-green-100 text-green-700 rounded-full text-sm">Vue.js</span>
+                            <span class="px-3 py-1 bg-green-100 text-green-700 rounded-full text-sm">NestJS</span>
                             <span class="px-3 py-1 bg-purple-100 text-purple-700 rounded-full text-sm">PHP</span>
-                            <span class="px-3 py-1 bg-orange-100 text-orange-700 rounded-full text-sm">JavaScript</span>
+                            <span class="px-3 py-1 bg-orange-100 text-orange-700 rounded-full text-sm">React</span>
                         </div>
                     </div>
                 </div>
