--- a/index.html
+++ b/index.html
@@ -504,7 +504,37 @@
                     </div>
                 </div>
 
-                <!-- Project 3 -->
+                <div class="project-card bg-white rounded-xl shadow-sm hover:shadow-xl border border-gray-100 md:col-span-2 lg:col-span-1">
+                    <div class="aspect-video bg-gradient-to-br from-blue-600 to-blue-700 rounded-t-xl relative overflow-hidden">
+                        <div class="absolute inset-0 bg-black/20"></div>
+                        <div class="absolute inset-0 flex items-center justify-center">
+                            <div class="text-white text-center">
+                                <div class="w-16 h-16 bg-white/20 rounded-lg flex items-center justify-center mx-auto mb-3">
+                                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
+                                        <path d="M21 16V8a2 2 0 00-1-1.73l-7-4a2 2 0 00-2 0l-7 4A2 2 0 003 8v8a2 2 0 001 1.73l7 4a2 2 0 002 0l7-4A2 2 0 0021 16z"/>
+                                    </svg>
+                                </div>
+                                <h4 class="text-lg font-semibold">Affiliate System</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold text-gray-900 mb-3">Mixinlabs Affiliate System</h3>
+                        <p class="text-gray-600 mb-4">Website untuk menampilkan dan mengatur sistem afiliasi dari penjualan produk.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="px-3 py-1 bg-red-100 text-red-700 rounded-full text-sm">Laravel</span>
+                            <span class="px-3 py-1 bg-green-100 text-green-700 rounded-full text-sm">Vue.js</span>
+                            <span class="px-3 py-1 bg-cyan-100 text-cyan-700 rounded-full text-sm">Tailwind</span>
+                        </div>
+                        <a href="https://affiliate.mixinlabs.com" target="_blank" class="text-blue-600 hover:text-blue-700 font-medium inline-flex items-center">
+                            Lihat Website
+                            <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
                 <div class="project-card bg-white rounded-xl shadow-sm hover:shadow-xl border border-gray-100">
                     <div class="aspect-video bg-gradient-to-br from-purple-500 to-purple-600 rounded-t-xl relative overflow-hidden">
                         <div class="absolute inset-0 bg-black/20"></div>
@@ -529,7 +559,6 @@
                     </div>
                 </div>
 
-                <!-- Project 4 -->
                 <div class="project-card bg-white rounded-xl shadow-sm hover:shadow-xl border border-gray-100">
                     <div class="aspect-video bg-gradient-to-br from-pink-500 to-pink-600 rounded-t-xl relative overflow-hidden">
                         <div class="absolute inset-0 bg-black/20"></div>
@@ -555,7 +584,6 @@
                     </div>
                 </div>
 
-                <!-- Project 5 -->
                 <div class="project-card bg-white rounded-xl shadow-sm hover:shadow-xl border border-gray-100">
                     <div class="aspect-video bg-gradient-to-br from-indigo-500 to-indigo-600 rounded-t-xl relative overflow-hidden">
                         <div class="absolute inset-0 bg-black/20"></div>
@@ -580,36 +608,7 @@
                     </div>
                 </div>
 
-                <!-- Bonus: Mixinlabs Landing -->
-                <div class="project-card bg-white rounded-xl shadow-sm hover:shadow-xl border border-gray-100 md:col-span-2 lg:col-span-1">
-                    <div class="aspect-video bg-gradient-to-br from-blue-600 to-blue-700 rounded-t-xl relative overflow-hidden">
-                        <div class="absolute inset-0 bg-black/20"></div>
-                        <div class="absolute inset-0 flex items-center justify-center">
-                            <div class="text-white text-center">
-                                <div class="w-16 h-16 bg-white/20 rounded-lg flex items-center justify-center mx-auto mb-3">
-                                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24">
-                                        <path d="M21 16V8a2 2 0 00-1-1.73l-7-4a2 2 0 00-2 0l-7 4A2 2 0 003 8v8a2 2 0 001 1.73l7 4a2 2 0 002 0l7-4A2 2 0 0021 16z"/>
-                                    </svg>
-                                </div>
-                                <h4 class="text-lg font-semibold">Landing Page</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold text-gray-900 mb-3">Mixinlabs Landing Page</h3>
-                        <p class="text-gray-600 mb-4">Website landing page profesional untuk software house Mixinlabs dengan design modern dan interaktif.</p>
-                        <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="px-3 py-1 bg-green-100 text-green-700 rounded-full text-sm">Vue.js</span>
-                            <span class="px-3 py-1 bg-cyan-100 text-cyan-700 rounded-full text-sm">Tailwind</span>
-                        </div>
-                        <a href="https://mixinlabs.com" target="_blank" class="text-blue-600 hover:text-blue-700 font-medium inline-flex items-center">
-                            Lihat Website
-                            <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-                            </svg>
-                        </a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
