--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
             <!-- Copyright -->
             <div class="border-t border-gray-800 pt-8 text-center">
                 <p class="text-gray-400">
-                    &copy; <span id="year"></span> Wiko Laygunata. Made with ❤️ and lots of ☕
+                    &copy; <span id="year"></span> Wiko Laygunata. Made with ❤️
                 </p>
             </div>
         </div>
